data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_863.wast
;; 4. **Recursive Initialization Calls in Loop**:    - Design a loop where initialization calls are recursive or cyclic. The improper handling of initialization within `validateCode` should cause the CFG to become invalid due to incorrect cycle detection.

(assert_invalid
  (module
    (func $recursive-init-in-loop 
      (i32.const 0) 
      (loop (param i32) 
        (call 0)
        (br 0)))
  )
  "recursive call in loop"
)